# banner-generator-api

./: .env.example  .gitignore  IMPLEMENTATION_COMPLETE.md  QUICK_START.md  README.md  README_SETUP.md  START_HERE.md  TEST_GUIDE.md  VERIFICATION_CHECKLIST.md  ai-integration.md  completion-tracker.md  diagnose_env.py  instructions.md  output.txt  pyproject.toml  setup_and_run.ps1  test_api.py  test_config.py  test_env.py  test_psd_parser.py  test_rate_limiter.py  view_output.ps1
app/: __init__.py  main.py
app/api/v1/: __init__.py  routes.py  schemas.py
app/models/: jobs.py
app/services/: analysis.py  jobs.py  psd_parser.py  rate_limiter.py  replicate_client.py  replicate_http_client.py  test_replicate_integration.py
banner_builder_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
docs/: AI_INTEGRATION.md  API.md  COMPLETION_TRACKER.md  DESIGNER_QUALITY_ROADMAP.md  INSTRUCTIONS.md  INTEGRATION_SUMMARY.md  README.md  REPLICATE_INTEGRATION.md  SETUP.md
